test/libsolidity/syntaxTests/errors/hash_collision.sol
contract test {
    error gsf();
    error tgeo();
}
// ----
// TypeError 4883: (43-47='tgeo'): Error signature hash collision for tgeo()
